--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,12 @@ colorama==0.4.3
 cycler==0.10.0
 defusedxml==0.6.0
 diff-match-patch==20181111
-Django==2.2.12
+Django==3.0.5
 django-countries==5.5
 django-currentuser==0.5.0
 django-import-export==2.0
 django-social-share==1.3.2
+django-summernote==0.8.11.6
 django-tinymce==2.8.0
 djangorestframework==3.11.0
 docx2txt==0.8
