Installed tinymce again

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,29 @@ asgiref==3.2.7
 astroid==2.3.3
 autopep8==1.5
 certifi==2019.6.16
+chardet==3.0.4
 colorama==0.4.3
 cycler==0.10.0
 defusedxml==0.6.0
-diff-match-patch==20181111
 Django==2.2.12
-django-countries==5.5
 django-currentuser==0.5.0
-django-import-export==2.0
 django-summernote==0.8.11.6
+django-tinymce==2.8.0
 djangorestframework==3.11.0
+EbookLib==0.17.1
 et-xmlfile==1.0.1
+extract-msg==0.23.1
 gunicorn==20.0.4
 IMAPClient==2.1.0
 isort==4.3.21
 jdcal==1.4.1
 joblib==0.14.1
-kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 lxml==4.5.0
+mccabe==0.6.1
 odfpy==1.4.0
 olefile==0.46
+pdfminer.six==20181108
 Pillow==7.0.0
 pipenv==2018.11.26
 psycopg2-binary==2.8.4
